# m2i_formation

./: .dockerignore  .env  .gitignore  MLproject  README.md  app.py  azure_ml.py  dev_app.py  dockerfile  main.py  pyproject.toml  python_env.yaml  requirements.txt  script.sh
.github/workflows/: model-deployment.yml  model_deployment.yaml
data/process/: v0_scores.csv
iris_model/: MLmodel  conda.yaml  model.pkl  requirements.txt
model/: v0_model.pkl
src/: __init__.py  data_preparation.py  evaluate.py  loader.py  mlflow_processor.py  train.py
src/application/: __init__.py  app_manager.py
src/application/routes/: __init__.py  _models.py  api_routes.py
src/core/: config.py
src/scripts/: __init__.py  azureml_processor.py  azureml_trainer.py  mlflow_processor.py  mlflow_trainer.py  utils.py
