[project]
name = "formation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-ml>=1.26.2",
    "azure-identity>=1.21.0",
    "fastapi[all]>=0.115.12",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pylint>=3.3.6",
    "ruff>=0.11.4",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
training = [
    "azure-ai-ml>=1.26.2",
    "scikit-learn>=1.6.1",
]
